--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -170,8 +170,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ОЦЕНИТЕ ПОСТАВЩИКА" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="8fk-YJ-apg">
-                                                    <rect key="frame" x="20" y="18.666666666666668" width="171.33333333333334" height="17.000000000000004"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <rect key="frame" x="20" y="18" width="182" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.34574854370000002" green="0.34580290320000001" blue="0.34573665260000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -221,6 +221,35 @@
                                                 <constraint firstItem="K7Z-ea-Zh6" firstAttribute="leading" secondItem="62T-Nu-AbF" secondAttribute="leading" id="k94-HX-fyQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="K7Z-ea-Zh6" secondAttribute="trailing" id="k9k-xm-dh4"/>
                                                 <constraint firstItem="8fk-YJ-apg" firstAttribute="leading" secondItem="62T-Nu-AbF" secondAttribute="leadingMargin" id="kaR-RF-krg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="leaveARevCell" rowHeight="51" id="cN1-1w-KyL">
+                                        <rect key="frame" x="0.0" y="229" width="390" height="51"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cN1-1w-KyL" id="VKu-Dj-6ni">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="51"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.message.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZVF-Sh-bIp">
+                                                    <rect key="frame" x="20" y="10.666666666666664" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="k1b-7p-NnW"/>
+                                                        <constraint firstAttribute="height" constant="31" id="wRB-5W-NHe"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ОСТАВИТЬ ОТЗЫВ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RmU-Ug-kFs">
+                                                    <rect key="frame" x="58" y="16.666666666666668" width="138.33333333333334" height="18.000000000000004"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="RmU-Ug-kFs" firstAttribute="leading" secondItem="ZVF-Sh-bIp" secondAttribute="trailing" constant="8" id="Ath-EZ-Chc"/>
+                                                <constraint firstItem="ZVF-Sh-bIp" firstAttribute="centerY" secondItem="VKu-Dj-6ni" secondAttribute="centerY" id="HsH-Pf-GjP"/>
+                                                <constraint firstItem="ZVF-Sh-bIp" firstAttribute="leading" secondItem="VKu-Dj-6ni" secondAttribute="leading" constant="20" symbolic="YES" id="WHG-gB-mHi"/>
+                                                <constraint firstItem="RmU-Ug-kFs" firstAttribute="centerY" secondItem="VKu-Dj-6ni" secondAttribute="centerY" id="hhg-UW-GHP"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1589,6 +1618,7 @@
         <image name="person.fill.checkmark" catalog="system" width="128" height="88"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <image name="photo.on.rectangle.fill" catalog="system" width="128" height="96"/>
+        <image name="plus.message.fill" catalog="system" width="128" height="113"/>
         <image name="rectangle.fill.on.rectangle.fill" catalog="system" width="128" height="96"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
